<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:padding="@dimen/margin_top">


        <ImageView
            android:id="@+id/prevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_arrow"
            android:visibility="invisible"
            android:padding="2dp"></ImageView>

        <TextView
            android:id="@+id/currentMonth"
            style="@style/tv_subheading"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"></TextView>

        <ImageView
            android:id="@+id/nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/right_arrow"
            android:visibility="invisible"
            android:padding="2dp"></ImageView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            style="@style/tv_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/monday"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            style="@style/tv_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tuesday"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            style="@style/tv_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wednesday"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            style="@style/tv_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/thuesday"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            style="@style/tv_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/friday"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            style="@style/tv_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/saturday"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            style="@style/tv_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sunday"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <com.kaerenabo.customviews.ExpandableHeightGridView
        android:id="@+id/calendar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_big"
        android:layout_marginBottom="@dimen/margin_top_big"
        android:numColumns="7" />

</LinearLayout>