<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_15"
    android:background="@color/white"
    tools:context="com.kaerenabo.fragments.AddPostFragment">

    <LinearLayout
        android:padding="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/margin_10"
            style="@style/tv_small"
            android:text="@string/label_post_desc" />

        <EditText
            android:inputType="textCapWords"
            android:id="@+id/et_desc"
            style="@style/et_style"
            android:layout_marginTop="@dimen/margin_2"
            android:textColor="@color/tv_color_gray_dark"
            android:textColorHint="@color/tv_color_gray_dark"
            android:textSize="@dimen/tv_normal" />

        <TextView
            android:layout_marginTop="@dimen/margin_10"
            style="@style/tv_small"
            android:text="@string/label_upload_photo" />

        <EditText
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:id="@+id/et_photo"
            style="@style/et_style"
            android:drawablePadding="@dimen/margin_2"
            android:drawableLeft="@drawable/attach_icon"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/tv_color_gray_dark"
            android:textColorHint="@color/tv_color_gray_dark"
            android:textSize="@dimen/tv_normal" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/btn_style_gray"
            android:layout_width="match_parent"
            android:layout_below="@id/ll_location"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/label_send_post" />

    </LinearLayout>

</android.support.v7.widget.CardView>
