<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_20"
    android:paddingRight="@dimen/margin_20"
    android:paddingTop="@dimen/margin_10"
    tools:context="com.kaerenabo.fragments.NeighbourFragment">

    <TextView
        style="@style/tv_headingb"
        android:text="@string/label_global_post" />

    <com.kaerenabo.customviews.WrapContentViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.kaerenabo.customviews.WrapContentViewPager>
    <RelativeLayout
        android:id="@+id/view_neighbour_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_group_heading"
            style="@style/tv_headingb"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/label_neighbour_group" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_arrow" />

        <TextView
            android:id="@+id/tv_member"
            style="@style/tv_normal"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_toLeftOf="@id/iv_arrow" />

        <TextView
            style="@style/tv_normal"
            android:layout_below="@id/tv_member"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_toLeftOf="@id/iv_arrow"
            android:text="@string/label_total_member" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5" />
</LinearLayout>
