<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location_verifiy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kaerenabo.activities.LocationVerifiyActivity">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/ll_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/tv_hello"
                style="@style/tv_normal"
                android:text="@string/hello_label" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/tv_normal"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_toRightOf="@id/tv_hello"
                android:textColor="@color/tv_color_gray_dark" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_hello"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/box_bg"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <TextView
                style="@style/tv_medium"
                android:text="@string/address_label" />

            <EditText
                android:id="@+id/et_location"
                style="@style/et_style"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/map_marker_icon"
                android:hint="@string/address_label"
                android:padding="0dp"
                android:textColor="@color/tv_color_gray_dark"
                android:textSize="@dimen/tv_normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_continue"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_below="@id/ll_location"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center_horizontal"
            android:text="@string/btn_continue" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_30"
            android:src="@drawable/splash_logo" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_location"
            android:background="@drawable/box_bg"
            android:padding="@dimen/margin_5"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>

