<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_15"
    android:background="@color/white"
    tools:context="com.kaerenabo.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_30"
        android:paddingTop="@dimen/margin_10"
        android:paddingLeft="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10">

        <ImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="@dimen/profile_pic_height"
            android:layout_height="@dimen/profile_pic_height"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_name"
            style="@style/tv_subheading"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"/>

        <TextView
            android:layout_margin="@dimen/margin_10"
            style="@style/tv_small"
            android:id="@+id/tv_likes"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:paddingTop="@dimen/margin_8"
                android:id="@+id/view_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/tv_medium"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/label_change_address" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/gray_light" />

            <RelativeLayout
                android:paddingTop="@dimen/margin_8"
                android:id="@+id/view_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/tv_medium"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/label_change_lang" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/gray_light" />

            <RelativeLayout
                android:paddingTop="@dimen/margin_8"
                android:id="@+id/view_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/tv_medium"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/label_logout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/gray_light" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>